--- a/styles/web/kendo.common-material.core.less
+++ b/styles/web/kendo.common-material.core.less
@@ -828,8 +828,8 @@ div.k-window-content {
     height: 10px;
     border-width: 0;
     margin-left: 0;
-    top: 4px;
-    left: 4px;
+    top: 5px;
+    left: 5px;
     transform: none;
     z-index: 2;
 }
