--- a/styles/web/kendo.common-nova.core.less
+++ b/styles/web/kendo.common-nova.core.less
@@ -831,6 +831,11 @@ div.k-window-content {
   left: 4px
 }
 
+.k-checkbox:indeterminate + .k-checkbox-label:after {
+    left: 9px;
+    top: 9px;
+}
+
 //RTL
 .k-rtl .k-widget .k-dropdown-wrap,
 .k-rtl .k-widget .k-picker-wrap,
